# FlaskStarter

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER_BUILD.md  Dockerfile  FIXES.md  MULTI_PLATFORM_DOCKER.md  Makefile  PRODUCTION_READY.md  QUICKSTART.md  QUICK_START_DOCKER.md  README.md  STATIC_RESTRUCTURE.md  STATUS.md  config.py  docker-build-multiplatform.sh  docker-compose.yml  init_db.py  manage.py  package-lock.json  package.json  pyproject.toml  setup.sh  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
app/: __init__.py
app/middleware/: __init__.py  permissions.py
app/models/: __init__.py  permission.py  role.py  user.py
app/routes/: auth.py  main.py  permissions.py  roles.py  users.py
migrations/versions/: 22fb7565d869_initial_migration.py  83ce07766555_.py
static/: README.md
static/src/css/: app.css
static/src/js/: app.js
templates/: base.html  dashboard.html  index.html
templates/auth/: login.html  register.html
templates/partials/: navbar.html
templates/permissions/: form.html  index.html
templates/roles/: form.html  index.html
templates/users/: form.html  index.html
tests/: __init__.py  app_test.py  conftest.py
tests/middleware/: permissions_test.py  test_permissions.py
tests/models/: permission_test.py  role_test.py  test_permission.py  test_role.py  test_user.py  user_test.py
tests/routes/: auth_test.py  main_test.py  permissions_test.py  roles_test.py  test_auth.py  test_main.py  test_permissions.py  test_roles.py  test_users.py  users_test.py
