[project]
name = "flaskstarter"
version = "0.1.0"
description = "A full-stack Flask starter with authentication, role-based authorization, and modern frontend"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.2.1",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-flask>=1.3.0",
    "faker>=33.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "error::DeprecationWarning:app.*",
    "error::DeprecationWarning:tests.*",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
